asignment2/initial/target/BKITParser.py
# Generated from main/bkit/parser/BKIT.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "','", "';'", 
                     "':'", "'.'", "'='", "'Var'", "'Function'", "'Parameter'", 
                     "'Body'", "'EndBody'", "'Break'", "'Continue'", "'Do'", 
                     "'Else'", "'ElseIf'", "'EndIf'", "'EndFor'", "'EndWhile'", 
                     "'For'", "'If'", "'Return'", "'Then'", "'While'", "'+'", 
                     "'+.'", "'-'", "'-.'", "'*'", "'*.'", "'\\'", "'/'", 
                     "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", 
                     "'>'", "'<='", "'>='", "'=/='", "'<.'", "'>.'", "'<=.'", 
                     "'>=.'", "'['", "']'", "'('", "')'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'int'", "'boolean'", 
                     "'string'", "'array'" ]

    symbolicNames = [ "<INVALID>", "CMT", "ID", "COMMA", "SEMI", "COLON", 
                      "DOT", "ASSIGN", "VAR", "FUNCTION", "PARA", "BODY", 
                      "ENDBODY", "BREAK", "CONTINUE", "DO", "ELSE", "ELSEIF", 
                      "ENDIF", "ENDFOR", "ENDWHILE", "FOR", "IF", "RETURN", 
                      "THEN", "WHILE", "IADD", "FADD", "ISUB", "FSUB", "IMUL", 
                      "FMUL", "IDIV", "FDIV", "IREM", "NEG", "CONJ", "DISJ", 
                      "EQ", "NOEQ", "LESS", "GREAT", "LEEQ", "GREQ", "NOEQF", 
                      "LEF", "GRF", "LEQF", "GEQF", "LS", "RS", "LB", "RB", 
                      "INTLIT", "FLOATLIT", "BOOLLIT", "STRINGLIT", "WS", 
                      "INTTYPE", "BOOLEANTYPE", "STRINGTYPE", "ARRAYTYPE", 
                      "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_glovardeclprt = 1
    RULE_vardecl = 2
    RULE_varlist = 3
    RULE_vari = 4
    RULE_vari_array = 5
    RULE_vari_scalar = 6
    RULE_indexop = 7
    RULE_lit = 8
    RULE_funcdeclprt = 9
    RULE_funcdecl = 10
    RULE_parafun = 11
    RULE_paralist = 12
    RULE_para = 13
    RULE_bodyfun = 14
    RULE_stmttype = 15
    RULE_nulstmtlst = 16
    RULE_varstmt = 17
    RULE_asstmt = 18
    RULE_value = 19
    RULE_ifthenStmt = 20
    RULE_elseStmt = 21
    RULE_ifstmt = 22
    RULE_stmtlst = 23
    RULE_forstmt = 24
    RULE_scava = 25
    RULE_inex = 26
    RULE_conExp = 27
    RULE_upex = 28
    RULE_whilestmt = 29
    RULE_dowhistmt = 30
    RULE_breakstmt = 31
    RULE_contstmt = 32
    RULE_callstmt = 33
    RULE_bet = 34
    RULE_returnstmt = 35
    RULE_exp = 36
    RULE_exp1 = 37
    RULE_exp2 = 38
    RULE_exp3 = 39
    RULE_exp4 = 40
    RULE_exp5 = 41
    RULE_exp6 = 42
    RULE_funccall = 43
    RULE_explist = 44

    ruleNames =  [ "program", "glovardeclprt", "vardecl", "varlist", "vari", 
                   "vari_array", "vari_scalar", "indexop", "lit", "funcdeclprt", 
                   "funcdecl", "parafun", "paralist", "para", "bodyfun", 
                   "stmttype", "nulstmtlst", "varstmt", "asstmt", "value", 
                   "ifthenStmt", "elseStmt", "ifstmt", "stmtlst", "forstmt", 
                   "scava", "inex", "conExp", "upex", "whilestmt", "dowhistmt", 
                   "breakstmt", "contstmt", "callstmt", "bet", "returnstmt", 
                   "exp", "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", 
                   "funccall", "explist" ]

    EOF = Token.EOF
    CMT=1
    ID=2
    COMMA=3
    SEMI=4
    COLON=5
    DOT=6
    ASSIGN=7
    VAR=8
    FUNCTION=9
    PARA=10
    BODY=11
    ENDBODY=12
    BREAK=13
    CONTINUE=14
    DO=15
    ELSE=16
    ELSEIF=17
    ENDIF=18
    ENDFOR=19
    ENDWHILE=20
    FOR=21
    IF=22
    RETURN=23
    THEN=24
    WHILE=25
    IADD=26
    FADD=27
    ISUB=28
    FSUB=29
    IMUL=30
    FMUL=31
    IDIV=32
    FDIV=33
    IREM=34
    NEG=35
    CONJ=36
    DISJ=37
    EQ=38
    NOEQ=39
    LESS=40
    GREAT=41
    LEEQ=42
    GREQ=43
    NOEQF=44
    LEF=45
    GRF=46
    LEQF=47
    GEQF=48
    LS=49
    RS=50
    LB=51
    RB=52
    INTLIT=53
    FLOATLIT=54
    BOOLLIT=55
    STRINGLIT=56
    WS=57
    INTTYPE=58
    BOOLEANTYPE=59
    STRINGTYPE=60
    ARRAYTYPE=61
    ERROR_CHAR=62
    UNCLOSE_STRING=63
    ILLEGAL_ESCAPE=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcdeclprt(self):
            return self.getTypedRuleContext(BKITParser.FuncdeclprtContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def glovardeclprt(self):
            return self.getTypedRuleContext(BKITParser.GlovardeclprtContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.VAR:
                self.state = 90
                self.glovardeclprt()


            self.state = 93
            self.funcdeclprt()
            self.state = 94
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlovardeclprtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VardeclContext)
            else:
                return self.getTypedRuleContext(BKITParser.VardeclContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_glovardeclprt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlovardeclprt" ):
                return visitor.visitGlovardeclprt(self)
            else:
                return visitor.visitChildren(self)




    def glovardeclprt(self):

        localctx = BKITParser.GlovardeclprtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_glovardeclprt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 96
                self.vardecl()
                self.state = 99 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKITParser.VAR):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def varlist(self):
            return self.getTypedRuleContext(BKITParser.VarlistContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = BKITParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(BKITParser.VAR)
            self.state = 102
            self.match(BKITParser.COLON)
            self.state = 103
            self.varlist()
            self.state = 104
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vari(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VariContext)
            else:
                return self.getTypedRuleContext(BKITParser.VariContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_varlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarlist" ):
                return visitor.visitVarlist(self)
            else:
                return visitor.visitChildren(self)




    def varlist(self):

        localctx = BKITParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.vari()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 107
                self.match(BKITParser.COMMA)
                self.state = 108
                self.vari()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vari_array(self):
            return self.getTypedRuleContext(BKITParser.Vari_arrayContext,0)


        def vari_scalar(self):
            return self.getTypedRuleContext(BKITParser.Vari_scalarContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_vari

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVari" ):
                return visitor.visitVari(self)
            else:
                return visitor.visitChildren(self)




    def vari(self):

        localctx = BKITParser.VariContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vari)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.vari_array()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.vari_scalar()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vari_arrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def indexop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.IndexopContext)
            else:
                return self.getTypedRuleContext(BKITParser.IndexopContext,i)


        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def lit(self):
            return self.getTypedRuleContext(BKITParser.LitContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_vari_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVari_array" ):
                return visitor.visitVari_array(self)
            else:
                return visitor.visitChildren(self)




    def vari_array(self):

        localctx = BKITParser.Vari_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vari_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(BKITParser.ID)
            self.state = 120 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 119
                self.indexop()
                self.state = 122 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKITParser.LS):
                    break

            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 124
                self.match(BKITParser.ASSIGN)
                self.state = 125
                self.lit()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vari_scalarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def lit(self):
            return self.getTypedRuleContext(BKITParser.LitContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_vari_scalar

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVari_scalar" ):
                return visitor.visitVari_scalar(self)
            else:
                return visitor.visitChildren(self)




    def vari_scalar(self):

        localctx = BKITParser.Vari_scalarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vari_scalar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(BKITParser.ID)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 129
                self.match(BKITParser.ASSIGN)
                self.state = 130
                self.lit()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndexopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LS(self):
            return self.getToken(BKITParser.LS, 0)

        def INTLIT(self):
            return self.getToken(BKITParser.INTLIT, 0)

        def RS(self):
            return self.getToken(BKITParser.RS, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_indexop

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndexop" ):
                return visitor.visitIndexop(self)
            else:
                return visitor.visitChildren(self)




    def indexop(self):

        localctx = BKITParser.IndexopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_indexop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(BKITParser.LS)
            self.state = 134
            self.match(BKITParser.INTLIT)
            self.state = 135
            self.match(BKITParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(BKITParser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(BKITParser.FLOATLIT, 0)

        def BOOLLIT(self):
            return self.getToken(BKITParser.BOOLLIT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_lit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLit" ):
                return visitor.visitLit(self)
            else:
                return visitor.visitChildren(self)




    def lit(self):

        localctx = BKITParser.LitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_lit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.INTLIT) | (1 << BKITParser.FLOATLIT) | (1 << BKITParser.BOOLLIT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclprtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.FuncdeclContext)
            else:
                return self.getTypedRuleContext(BKITParser.FuncdeclContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_funcdeclprt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdeclprt" ):
                return visitor.visitFuncdeclprt(self)
            else:
                return visitor.visitChildren(self)




    def funcdeclprt(self):

        localctx = BKITParser.FuncdeclprtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcdeclprt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 139
                self.funcdecl()
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def bodyfun(self):
            return self.getTypedRuleContext(BKITParser.BodyfunContext,0)


        def parafun(self):
            return self.getTypedRuleContext(BKITParser.ParafunContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = BKITParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(BKITParser.FUNCTION)
            self.state = 146
            self.match(BKITParser.COLON)
            self.state = 147
            self.match(BKITParser.ID)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARA:
                self.state = 148
                self.parafun()


            self.state = 151
            self.bodyfun()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParafunContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARA(self):
            return self.getToken(BKITParser.PARA, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def paralist(self):
            return self.getTypedRuleContext(BKITParser.ParalistContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_parafun

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParafun" ):
                return visitor.visitParafun(self)
            else:
                return visitor.visitChildren(self)




    def parafun(self):

        localctx = BKITParser.ParafunContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_parafun)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(BKITParser.PARA)
            self.state = 154
            self.match(BKITParser.COLON)
            self.state = 155
            self.paralist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParalistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def para(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ParaContext)
            else:
                return self.getTypedRuleContext(BKITParser.ParaContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_paralist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParalist" ):
                return visitor.visitParalist(self)
            else:
                return visitor.visitChildren(self)




    def paralist(self):

        localctx = BKITParser.ParalistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_paralist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.para()
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 158
                self.match(BKITParser.COMMA)
                self.state = 159
                self.para()
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vari(self):
            return self.getTypedRuleContext(BKITParser.VariContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_para

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPara" ):
                return visitor.visitPara(self)
            else:
                return visitor.visitChildren(self)




    def para(self):

        localctx = BKITParser.ParaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_para)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.vari()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyfunContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def nulstmtlst(self):
            return self.getTypedRuleContext(BKITParser.NulstmtlstContext,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_bodyfun

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBodyfun" ):
                return visitor.visitBodyfun(self)
            else:
                return visitor.visitChildren(self)




    def bodyfun(self):

        localctx = BKITParser.BodyfunContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_bodyfun)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(BKITParser.BODY)
            self.state = 168
            self.match(BKITParser.COLON)
            self.state = 169
            self.nulstmtlst()
            self.state = 170
            self.match(BKITParser.ENDBODY)
            self.state = 171
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmttypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asstmt(self):
            return self.getTypedRuleContext(BKITParser.AsstmtContext,0)


        def ifstmt(self):
            return self.getTypedRuleContext(BKITParser.IfstmtContext,0)


        def forstmt(self):
            return self.getTypedRuleContext(BKITParser.ForstmtContext,0)


        def whilestmt(self):
            return self.getTypedRuleContext(BKITParser.WhilestmtContext,0)


        def dowhistmt(self):
            return self.getTypedRuleContext(BKITParser.DowhistmtContext,0)


        def breakstmt(self):
            return self.getTypedRuleContext(BKITParser.BreakstmtContext,0)

